src/test/ui/resolve/issue-14254.stderr
error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:29:9
   |
29 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `a` in this scope
  --> $DIR/issue-14254.rs:31:9
   |
31 |         a;
   |         ^ not found in this scope

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:39:9
   |
39 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `x` in this scope
  --> $DIR/issue-14254.rs:41:9
   |
41 |         x;
   |         ^ help: try: `self.x`

error[E0425]: cannot find value `y` in this scope
  --> $DIR/issue-14254.rs:43:9
   |
43 |         y;
   |         ^ help: try: `self.y`

error[E0425]: cannot find value `a` in this scope
  --> $DIR/issue-14254.rs:45:9
   |
45 |         a;
   |         ^ not found in this scope

error[E0425]: cannot find value `bah` in this scope
  --> $DIR/issue-14254.rs:48:9
   |
48 |         bah;
   |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find value `b` in this scope
  --> $DIR/issue-14254.rs:50:9
   |
50 |         b;
   |         ^ not found in this scope

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:58:9
   |
58 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `x` in this scope
  --> $DIR/issue-14254.rs:60:9
   |
60 |         x;
   |         ^ help: try: `self.x`

error[E0425]: cannot find value `y` in this scope
  --> $DIR/issue-14254.rs:62:9
   |
62 |         y;
   |         ^ help: try: `self.y`

error[E0425]: cannot find value `a` in this scope
  --> $DIR/issue-14254.rs:64:9
   |
64 |         a;
   |         ^ not found in this scope

error[E0425]: cannot find value `bah` in this scope
  --> $DIR/issue-14254.rs:67:9
   |
67 |         bah;
   |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find value `b` in this scope
  --> $DIR/issue-14254.rs:69:9
   |
69 |         b;
   |         ^ not found in this scope

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:77:9
   |
77 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `bah` in this scope
  --> $DIR/issue-14254.rs:79:9
   |
79 |         bah;
   |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:86:9
   |
86 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `bah` in this scope
  --> $DIR/issue-14254.rs:88:9
   |
88 |         bah;
   |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/issue-14254.rs:95:9
   |
95 |         baz();
   |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `bah` in this scope
  --> $DIR/issue-14254.rs:97:9
   |
97 |         bah;
   |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find function `baz` in this scope
   --> $DIR/issue-14254.rs:104:9
    |
104 |         baz();
    |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `bah` in this scope
   --> $DIR/issue-14254.rs:106:9
    |
106 |         bah;
    |         ^^^ help: try: `Self::bah`

error[E0425]: cannot find function `baz` in this scope
   --> $DIR/issue-14254.rs:113:9
    |
113 |         baz();
    |         ^^^ help: try: `self.baz`

error[E0425]: cannot find value `bah` in this scope
   --> $DIR/issue-14254.rs:115:9
    |
115 |         bah;
    |         ^^^ help: try: `Self::bah`

error[E0601]: main function not found

error: aborting due to 25 previous errors

